add fitur reject and delete ticket by admin
